--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,10 +4,10 @@
     "version": "1.0",
     "description": "Analyze and improve your AI prompts for clarity and efficiency.",
     "background": {
-        "service worker":"background.js"
+        "service_worker": "background.js"
     },
     "permissions": ["storage","scripting", "activeTab"],
-    "host_permissions": ["https://chatgpt.com/*", "https://chat.openai.com/*"],
+    "host_permissions": ["http://127.0.0.1:8000/", "https://chatgpt.com/*", "https://chat.openai.com/*"],
     "action": {
         "default_popup": "popup.html"
     },
