--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,6 +8,12 @@
     },
     "permissions": ["storage","scripting", "activeTab"],
     "host_permissions": ["http://127.0.0.1:8000/", "https://chatgpt.com/*", "https://chat.openai.com/*"],
+    "web_accessible_resources": [
+        {
+            "resources": ["chart.min.js"],
+            "matches": ["https://chatgpt.com/*", "https://chat.openai.com/*"]
+        }
+    ],
     "action": {
         "default_popup": "popup.html"
     },
