--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,7 +15,13 @@
         }
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "128": "icon.png"
+        }
+    },
+    "icons":{
+        "128": "icon.png"
     },
     "content_scripts": [
         {
@@ -24,3 +30,5 @@
         }
     ]
 }
+
+
